--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,363 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;500&display=swap');
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@500&family=Passion+One&display=swap');
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Outfit', sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+/*//////////////////////PART01//////////////////////////////////*/
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+.box1{
+    width: 1200px;
+    margin: auto;
+}
+
+header{
+    width: 100%;
+    background-color: #F5F5F5;
+}
+
+menu{
+    display: flex;
+    justify-content: space-between;
+    background-color: #F5F5F5;
+}
+
+.tab{
+    display: flex;
+    width: 350px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.link_c{
+    text-decoration: none;
+    color: black;
+}
+
+.pesquisa{
+    background-color: #7bacf4;
+    padding: 5px 15px 5px 15px;
+    border-radius: 6px;
+    color: white;
+    text-decoration: none;
+}
+
+/*//////////////////////PART02//////////////////////////////////*/
+
+.box2{
+    width: 1200px;
+    margin: auto;
+    display: flex;
+}
+
+
+.art1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F5F5F5;
+    padding-top: 150px;
+    padding-bottom: 100px;
+}
+
+h1{
+    font-size: 1em;
+    color: #7bacf4;
+
+}
+
+.art1_box_text{
+    display: flex;
+    flex-direction: column;
+    width: 637px;
+}
+
+.text1{
+    font-size: 3em;
+    padding-bottom: 20px;
+    font-family: 'Fira Sans Condensed';
+}
+
+.text2{
+    width: 400px;
+    font-size: 1.1em;
+    padding-bottom: 30px;
+    color: #6A6A6A;
+}
+
+.text3{
+    display: flex;
+    justify-content: space-between;
+    color: #7bacf4;
+    border: 2px solid #7bacf4;
+    width: 200px;
+    border-radius: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+/*//////////////////////PART03//////////////////////////////////*/
+
+
+.box3{
+    width: 1200px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.art2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #93beff49;
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+
+.text4{
+    margin-bottom: 30px;
+    font-family: 'Fira Sans Condensed';
+    font-size: 1.7em;
+}
+
+
+.quiz_box{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+
+.button1, .button2, .button3, .button4, .button5, .button6, .button7{
+    width: 220px;
+    margin-bottom: 15px;
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+
+
+
+
+.confirm{
+    width: 220px;
+    margin-top: 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #93beff;
+    color: white;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+/*//////////////////////PART04//////////////////////////////////*/
+
+.box4{
+    width: 1200px;
+    display: flex;
+    justify-content: space-between;
+    justify-items: center;
+}
+
+
+.art3{
+    display: flex;
+    justify-content: center;
+    background-color: #F5F5F5;
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+
+.text5{
+    color: #6A6A6A;
+    width: 250px;
+    padding-top: 15px;
+}
+
+
+.brand{
+    display: flex;
+    flex-direction: column;
+    width: 300px;  
+}
+
+
+.who{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    align-items: center;
+}
+
+
+.content{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    align-items: center;
+}
+
+
+.topic{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    align-items: center;
+}
+
+
+.link_f{
+    text-decoration: none;
+    color: #6A6A6A;
+    padding-bottom: 15px;
+}
+
+
+.link_fo{
+    text-decoration: none;
+    color: black;
+    font-weight: bolder;
+    padding-bottom: 30px;
+    padding-top: 15px;
+}
+
+
+footer{
+    background-color: #D8D8D8;
+    text-align: center;
+    color: #6A6A6A;
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
+
+
+/*//////////////////////////////////MOBILE/////////////////////////////////////*/
+
+@media (max-width: 480px) {
+    
+    .tab{
+        display: none;
+    }
+    
+    .box1{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+/*//////////////////////////////////////////////*/
+
+
+    .art1{
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .box2{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        width: 100%;
+    }
+
+
+    .art1_box_text{
+        width: 100%;
+        align-items: first baseline;
+        padding-left: 30px;
+        padding-top: 70px;
+    }
+
+    .text1{
+        font-size: 2.5em;
+    }
+
+  
+/*//////////////////////////////////////////////*/
+
+
+    .box3{
+        width: 100%;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+/*//////////////////////////////////////////////*/
+
+
+
+    .box4{
+        display: flex;
+        justify-content: space-between;
+        justify-items: center;
+        width: 100%;
+        align-self: baseline;
+        flex-wrap: wrap;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .brand{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 50%; 
+        padding-bottom: 40px; 
+    }
+
+    .text5{
+        text-align: center;
+    }
+    
+    
+    .who{
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        align-items: center;
+        padding-bottom: 40px;
+    }
+    
+    
+    .content{
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        align-items: center;
+    }
+    
+    
+    .topic{
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        align-items: center;
+    }
+
   }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
