--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,17 +1,17 @@
 
     @font-face {
         font-family: 'Outfit-Regular';
-        src: url('/public/font/Outfit-Regular.ttf') format('truetype');
+        src: url('/font/Outfit-Regular.ttf') format('truetype');
     }
 
     @font-face {
         font-family: 'Outfit-Medium';
-        src: url('/public/font/Outfit-Medium.ttf') format('truetype');
+        src: url('/font/Outfit-Medium.ttf') format('truetype');
     }
 
     @font-face {
         font-family: 'FiraSansCondensed-Medium';
-        src: url('/public/font/FiraSansCondensed-Medium.ttf') format('truetype');
+        src: url('/font/FiraSansCondensed-Medium.ttf') format('truetype');
     }
 
 *{
@@ -19,25 +19,26 @@
     padding: 0px;
 }
 
-/*//////////////////////PART01//////////////////////////////////*/
+
+/*//////////////////////HEADER//////////////////////////////////*/
 
 .box1{
     margin: auto;
     width: 1280px;
+    overflow: hidden;
 }
 
 header{
-    width: 100%;
     background-color: #F5F5F5;
     padding-top: 10px;
 }
 
 menu{
+    max-width: 100vw;
     display: flex;
     justify-content: space-between;
     background-color: #F5F5F5;
-    padding-left: 10px;
-    padding-right: 10px;
+    overflow: hidden;
 }
 
 .tab{
@@ -45,6 +46,7 @@ menu{
     width: 350px;
     justify-content: space-between;
     align-items: center;
+    padding-right: 10px;
 }
 
 .link_c{
@@ -63,12 +65,13 @@ menu{
     border: none;
 }
 
-/*//////////////////////PART02//////////////////////////////////*/
+/*//////////////////////ARTICLE//////////////////////////////////*/
 
 .box2{
     width: 1280px;
     margin: auto;
     display: flex;
+    overflow: hidden;
 }
 
 
@@ -98,7 +101,7 @@ h1{
 .text1{
     font-size: 3.4em;
     padding-bottom: 20px;
-    font-family: 'FiraSansCondensed-Medium';
+    font-family: 'FiraSansCondensed-Medium' !important;
     font-weight: normal;
 }
 
@@ -112,7 +115,7 @@ h1{
 
 .text3{
     display: flex;
-    width: 250px;
+    width: 265px;
     align-items: center;
     font-family: 'Outfit-Medium';
     font-size: 1.2em;
@@ -123,25 +126,38 @@ h1{
     padding-right: 35px;
     padding-top: 10px;
     padding-bottom: 10px;
+    background-color: #F5F5F5;
 }
 
 .arrow{
     padding-left: 20px;
 }
 
-.hero{
-    width: auto;
+.hero_box{
+    max-width: 100%;
+    overflow: hidden;
 }
 
-/*//////////////////////PART03//////////////////////////////////*/
+.hero {
+    max-width: 100%;
+    height: auto;
+  }
+
+/*//////////////////////QUIZ//////////////////////////////////*/
 
 
 .box3{
     width: 1280px;
-    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
+}
+
+.circles{
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
 }
 
 
@@ -157,20 +173,33 @@ h1{
 
 .text4{
     margin-bottom: 30px;
+    padding-top: 70px;
     font-family: 'FiraSansCondensed-Medium';
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: normal;
+    max-width: 98vw;
 }
 
 
 .quiz_box{
     display: flex;
     flex-direction: column;
-    
+    max-width: 100vw;
 }
 
 
-.button1, .button2, .button3, .button4, .button5, .button6, .button7{
+.quiz01_button1, .quiz01_button2, .quiz01_button3, .quiz01_button4, .quiz01_button5, .quiz01_button6, .quiz01_button7, 
+.quiz02_button1, .quiz02_button2,
+.quiz03_button1, .quiz03_button2,
+.quiz04_button1, .quiz04_button2,
+.quiz05_button1, .quiz05_button2,
+.quiz06_button1, .quiz06_button2,
+.quiz07_button1, .quiz07_button2,
+.quiz08_button1, .quiz08_button2,
+.quiz09_button1, .quiz09_button2,
+.quiz10_button1, .quiz10_button2,
+.quiz11_button1, .quiz11_button2,
+.quiz12_button1, .quiz12_button2{
     font-family: 'Outfit-Regular';
     font-size: 1em;
     width: 220px;
@@ -198,12 +227,13 @@ h1{
     padding-bottom: 10px;
 }
 
-/*//////////////////////PART04//////////////////////////////////*/
+/*//////////////////////FOOTER//////////////////////////////////*/
 
 .box4{
     width: 1280px;
     display: flex;
     justify-items: center;
+    overflow: hidden;
 }
 
 
@@ -220,7 +250,7 @@ h1{
     font-family: 'Outfit-Regular';
     font-size: 1.2em;
     color: #6A6A6A;
-    width: 250px;
+    width: 100%;
     padding-top: 15px;
 }
 
@@ -285,8 +315,10 @@ h1{
 
 /*//////////////////////////////////MOBILE/////////////////////////////////////*/
 
-@media (max-width: 480px) {
+@media (max-width: 540px) {
     
+    html, body{width: 375px;}
+
     .tab{
         display: none;
     }
@@ -319,35 +351,54 @@ h1{
     }
 
     .text1{
-        font-size: 2.5em;
+        font-size: 2.2em;
+        max-width: 96%;
     }
 
-    .hero{
-        width: auto;
+    .text2{
+        max-width: 96%;
+        overflow: hidden;
     }
 
-    .hero_p{
-        width: 475px;
-        height: 375px;
+    .hero_box{
+        max-width: 100%;
+        overflow: hidden;
     }
+
+    .hero {
+        max-width: 97%;
+        height: auto;
+      }
 
   
-/*///////////////////Article2//////////////////////////*/
+/*///////////////////QUIZ//////////////////////////*/
 
     .box3{
-        width: 100%;
+        max-width: 100%;
         margin: auto;
         display: flex;
         flex-direction: column;
         align-items: center;
+        overflow: hidden;
     }
 
-/*///////////////////Article3///////////////////////////////*/
+    .circles{
+        display: flex;
+        width: 80%;
+        justify-content: space-between;
+    }
+
+    .text4{
+        max-width: 97%;
+        overflow: hidden;
+    }
+
+/*///////////////////FOOTER///////////////////////////////*/
 
     .box4{
         display: flex;
         justify-items: center;
-        width: 100%;
+        max-width: 100%;
         align-self: baseline;
         flex-wrap: wrap;
         padding-left: 25px;
@@ -355,10 +406,12 @@ h1{
 
     .text5{
         font-family: 'Outfit-Regular';
-        font-size: 1.2em;
+        font-size: 1em;
         color: #6A6A6A;
-        width: 200px;
-        padding-top: 15px;}
+        max-width: 100%;
+        padding-top: 15px;
+        overflow: hidden;
+    }
 
     .brand{
         display: flex;
@@ -367,6 +420,7 @@ h1{
         padding-bottom: 40px;
         width: 50%; 
         padding-left: 0px;
+        overflow: hidden;
     }
 
     .who{
@@ -375,13 +429,15 @@ h1{
         align-items: baseline;
         padding-bottom: 40px;
         width: 50%;
+        font-size: 0.9em;
     }
     
     .content{
         display: flex;
         flex-direction: column;
         align-items: baseline;
-        width: 50%; 
+        width: 50%;
+        font-size: 0.9em; 
     }
     
     .topic{
@@ -390,6 +446,7 @@ h1{
         align-items: baseline;
         width: 50%; 
         padding-right: 0px;
+        font-size: 0.9em;
     }
 
   }
