--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,7 @@ menu{
     text-decoration: none;
     color: black;
     font-family: 'Outfit-Medium';
+    font-size: 16px;
 }
 
 .pesquisa{
@@ -63,6 +64,8 @@ menu{
     color: white;
     text-decoration: none;
     border: none;
+    font-size: 16px;
+    cursor: pointer;
 }
 
 /*//////////////////////ARTICLE//////////////////////////////////*/
@@ -88,7 +91,7 @@ h1{
     color: #7bacf4;
     font-family: 'Outfit-Medium';
     font-weight: normal;
-
+    font-size: 16px;
 }
 
 .art1_box_text{
@@ -108,26 +111,33 @@ h1{
 .text2{
     font-family: 'Outfit-Regular';
     width: 400px;
-    font-size: 1.2em;
+    font-size: 18   px;
     padding-bottom: 30px;
     color: #6A6A6A;
 }
 
 .text3{
     display: flex;
-    width: 265px;
+    width: fit-content;
     align-items: center;
     font-family: 'Outfit-Medium';
-    font-size: 1.2em;
+    font-size: 16px;
     color: #7bacf4;
-    border: 2px solid #7bacf4;
+    border: 1px solid #7bacf4;
     border-radius: 5px;
-    padding-left: 35px;
-    padding-right: 35px;
+    padding-left: 20px;
+    padding-right: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: #F5F5F5;
+    cursor: pointer;
 }
+
+.text3:hover{
+    background-color: #e7f0fd;
+    color: #7bacf4;
+}
+
 
 .arrow{
     padding-left: 20px;
@@ -213,6 +223,15 @@ h1{
     padding-bottom: 10px;
 }
 
+.button_answers{
+    cursor:pointer;
+}
+
+.button_answers:hover{
+    background-color: #9BB5F3;
+    color: #fff;
+    font-weight: bold;
+}
 
 .art2_1{
     display: flex;
@@ -352,12 +371,13 @@ h1{
     background-color: #F5F5F5;
     padding-top: 50px;
     padding-bottom: 50px;
+    font-size: 16px;
 }
 
 
 .text5{
     font-family: 'Outfit-Regular';
-    font-size: 1.2em;
+    font-size: 17px;
     color: #6A6A6A;
     width: 98%;
     padding-top: 15px;
@@ -403,7 +423,7 @@ h1{
 .link_f{
     font-family: 'Outfit-Regular';
     width: 68%;
-    font-size: 1.2em;
+    font-size: 17px;
     text-decoration: none;
     color: #6A6A6A;
     padding-bottom: 15px;
