--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -230,9 +230,9 @@ h1{
 .box_link{
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding-left: 220px;
-    padding-right: 220px;
+    justify-content: space-evenly;
+    padding-left: 120px;
+    padding-right: 120px;
     margin-top: 50px;
 }
 
@@ -240,7 +240,6 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 25%;
 }
 
 .box_img{
@@ -261,6 +260,7 @@ h1{
     font-family: 'Outfit-Medium';
     color: #000000;
     font-size: 1.25em;
+    cursor: pointer;
 }
 
 .box_link_text{
@@ -276,7 +276,7 @@ h1{
 .text_link1, .text_link2 {
     font-size: 1.45em;
     font-family: 'Outfit-Regular';
-    width: 70%;
+    padding-right: 120px;
 }
 
 .text_link1{
@@ -876,7 +876,7 @@ h1{
     font-family: 'Outfit-Medium';
     font-size: 1.6em;
     color: #274d85;
-    box-shadow: 1px 1px 25px #afafaf;
+    box-shadow: 1px 1px 25px #afafaf6c;
 }
 
 
@@ -1000,6 +1000,7 @@ h1{
     width: 1280px;
     display: flex;
     justify-items: center;
+    justify-content: space-between;
     overflow: hidden;
     }
     
@@ -1019,7 +1020,6 @@ h1{
     font-size: 1.45em;
     font-size: 17px;
     color: #ffffff;
-    width: 98%;
     padding-top: 15px;
     }
     
@@ -1027,44 +1027,42 @@ h1{
     .brand{
     display: flex;
     flex-direction: column;
-    width: 25%;
     padding-left: 0px;
-    padding-right: 150px; 
+    flex: 1 1 0%;
     }
     
     
     .who{
     display: flex;
     flex-direction: column;
-    width: 25%;
     align-items: center;
     text-align: left;
+    flex: 1 1 0%;
     }
     
     
     .content{
     display: flex;
     flex-direction: column;
-    width: 25%;
     align-items: center;
     text-align: left;
+    flex: 1 1 0%;
     }
     
     
     .topic{
     display: flex;
     flex-direction: column;
-    width: 25%;
     align-items: center;
     text-align: left;
     padding-right: 50px;
+    flex: 1 1 0%;
     }
     
     
     .link_f{
     font-family: 'Outfit-Regular';
     font-size: 1.45em;
-    width: 80%;
     font-size: 17px;
     text-decoration: none;
     color: #ffffff;
@@ -1076,7 +1074,6 @@ h1{
     font-family: 'Outfit-Black';
     font-size: 1.45em;
     text-decoration: none;
-    width: 80%;
     color: #ffffff;
     font-weight: bolder;
     padding-bottom: 30px;
